--- a/www/index.html
+++ b/www/index.html
@@ -12,8 +12,8 @@
 
 <body>
   <div id="root"></div>
-  <% for (var chunk in htmlWebpackPlugin.files.js) { %>
-  <script src="<%= htmlWebpackPlugin.files.js[chunk]%>"></script>
+  <% for (var js in htmlWebpackPlugin.files.js) { %>
+  <script src="<%= htmlWebpackPlugin.files.js[js] %>"></script>
   <% } %>
 </body>
 
