--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <% for (var chunk in htmlWebpackPlugin.files.css) { %>
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[chunk]%>">
   </link>
