--- a/www/index.html
+++ b/www/index.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <% for (var chunk in htmlWebpackPlugin.files.css) { %>
-  <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[chunk]%>">
-  </link>
-  <% } %>
-  <title><%= htmlWebpackPlugin.options.title %></title>
-</head>
-
-<body class="body">
-  <div id="root"></div>
-  <% for (var js in htmlWebpackPlugin.files.js) { %>
-  <script src="<%= htmlWebpackPlugin.files.js[js] %>"></script>
-  <% } %>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%= htmlWebpackPlugin.options.title %></title>
+  </head>
+  <body class="body">
+    <div id="root"></div>
+  </body>
 </html>
